tests/fixtures/invalid/set_mul_float.py
# Cannot multiply Set[int] and Float
x: float = {1, 2, 3} * 1.0
